# rust-voice

./: .gitignore  Cargo.toml  README.md  flake.nix
client/: Cargo.toml
client/examples/: basic.rs
client/examples/app/: Cargo.toml
client/examples/app/src/: full.rs
client/src/: app.rs  audio.rs  client.rs  decoder.rs  latency.rs  lib.rs  main.rs  mic.rs  mixer.rs  oldmain.rs  opus.rs  packet.rs  playback.rs  source.rs  util.rs  voice.rs
client/src/audio/: builder.rs  handle.rs  microphone.rs  mod.rs  playback.rs  service.rs  stats.rs  streams.rs
client/src/cpal/: backend.rs  mod.rs  stream.rs
client/src/opus/: decoder.rs  encoder.rs  mod.rs  util.rs
client/src/services/: audio_service.rs  decoder.rs  encoder.rs  mixer.rs
client/src/util/: mod.rs  opus.rs  resampling.rs
clients/curses/src/: main.rs
common/: Cargo.toml
common/src/: atomic_counter.rs  lib.rs  packets.rs  rolling_avg.rs  user.rs
full/app/: Cargo.toml
full/app/src/: async_drop.rs  client.rs  conn.rs  log_pipe.rs  main.rs
full/curses/: Cargo.toml
full/curses/src/: app.rs  client.rs  main.rs
full/curses/src/services/: audio_service.rs  mixer.rs  mod.rs
server/: Cargo.toml
server/src/: config.rs  main.rs  server.rs
