[package]
name = "client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }

cpal = "0.13.5"
anyhow = "1.0.62"
ringbuf = "0.2.8"
crossbeam = "0.8.2"
opus = "0.3.0"

serde = {version = "1", features = ["derive"]}
bincode = "1"

uuid = {version = "1.1.2", features = ["serde"]}

log = "0.4.17"
env_logger = "0.9.0"

kira = "0.7.0"
