[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { version = "0.1.0", path = "../common" }

log = "0.4.17"

anyhow = "1.0.70"
crossbeam = "0.8.2"

ringbuf = "0.3.2"
cpal = { version = "0.15.1", features = ["jack"] }
bincode = "1.3.3"
opus = "0.3.0"

[dev-dependencies]
clap = "4.1.11"
env_logger = "0.10.0"
