[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
clap = { version = "3.2.17", features = ["derive"]}

serde = {version = "1", features = ["derive"]}
bincode = "1"

log = "0.4.17"
env_logger = "0.9.0"