[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
client = { path = "../../client" }
common = { path = "../../common" }
flexi_logger = {version = "0.27.3", features = ["async"]}
iced = "0.10.0"
log = "0.4.20"
ringbuf = "0.3.3"
