[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-std = "1.12.0"
bincode = "1.3.3"
client = { path = "../../client" }
common = { path = "../../common" }
flexi_logger = {version = "0.27.3", features = ["async"]}
futures = "0.3.29"
iced = "0.10.0"
log = "0.4.20"
ringbuf = "0.3.3"
