[package]
name = "curses"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../../common" }
client = { path = "../../client" }
clap = { version = "3.2.17", features = ["derive"]}

cpal = "0.13.5"
anyhow = "1.0.62"
ringbuf = "0.3"
crossbeam = "0.8.2"
opus = "0.3.0"

serde = {version = "1", features = ["derive"]}
bincode = "1"

log = "0.4.17"
flexi_logger = { version = "0.23.0", features = ["async"] }

tracing = {version = "0.1.36"}
tracing-subscriber = {version = "0.3.15"}
tracing-tracy = {git = "https://github.com/nagisa/rust_tracy_client.git", branch = "main", optional = true}
tracy-client = {git = "https://github.com/nagisa/rust_tracy_client.git", branch = "main", optional = true}
crossterm = "0.27.0"

[features]
default = []
trace = ["tracing-tracy", "tracy-client"]
